[package]
name = "funck"
description = "Utilities for writing & deploying functions to a Funcky FaaS server."
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
